--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 30;    
+    var randomStart = 31;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -481,6 +481,21 @@ jQuery(document).ready(function() {
 <p><strong>Twitter bio: </strong>Your Local, Homegrown Online Community Since 2004 - Serving Montclair, Bloomfield, Glen Ridge, Maplewood, Millburn, South Orange and West Orange.</p>
 <p><strong>Nominated by: Tish Grier (@tishgrier)</strong> </p>
         <p>"Not only did they start one of the first hyperlocal sites to become sustainable, they've also done a number of things to serve the community that would be considered "social" -- such as finding a way to bring real-time traffic reports to their community &amp; site, use Twitter &amp; Facebook before many others, and if you asked them, I think there are probably a bunch of ideas that they had before the technology was available. -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=148311165208907&comments">Tish Grier</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/1145596615/P1190085_2_2_reasonably_small.JPG" width="128" height="128" alt="" />
+        <p><strong>Janis Krums</strong><br/>
+            <a href="http://www.twitter.com/jkrums">@jkrums</a><br/>
+            <a href="http://www.about.me/JanisKrums">about.me/JanisKrums</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Entrepreneur, Athlete, The Miracle on the Hudson Photo Guy, Latvian, Co-Founder of Elementz Nutrition and InboxAlarm, Investor in AIT Bridges.</p>
+<p><strong>Nominated by: Ellyn Angelotti</strong> </p>
+        <p>"The <a href="http://twitter.com/#!/jkrums/status/1121915133">photo</a> Janis took of the plane that landed in the Hudson River was not only a powerful image, but it also represents the changing nature of news as a result of social media." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=422518584332&comments">Ellyn Angelotti</a></p>
     </div>
 </li>
 
