--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 31;    
+    var randomStart = 32;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -381,7 +381,7 @@ jQuery(document).ready(function() {
 
 <li>
     <div class="photo">
-        <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcQ57kpCNXSp1ffPPRPc2YaFk-vdByFOrFkMHQcqz7e_zi6-nFk&t=1&usg=__U4Fu6MioB2sUGV5X-K-Bs319Nvg=" width="128" height="128" alt="" />
+        <img src="http://pavingparadise.s3.amazonaws.com/author_matthew_waite.jpg" width="128" alt="" />
         <p><strong>Matt Waite</strong><br/>
             <a href="http://www.twitter.com/mattwaite">@mattwaite</a><br/>
             <a href="http://www.mattwaite.com/">mattwaite.com</a>
@@ -496,6 +496,21 @@ jQuery(document).ready(function() {
 <p><strong>Twitter bio: </strong>Entrepreneur, Athlete, The Miracle on the Hudson Photo Guy, Latvian, Co-Founder of Elementz Nutrition and InboxAlarm, Investor in AIT Bridges.</p>
 <p><strong>Nominated by: Ellyn Angelotti</strong> </p>
         <p>"The <a href="http://twitter.com/#!/jkrums/status/1121915133">photo</a> Janis took of the plane that landed in the Hudson River was not only a powerful image, but it also represents the changing nature of news as a result of social media." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=422518584332&comments">Ellyn Angelotti</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a1.twimg.com/profile_images/934435989/twittermonica_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Monica Guzman</strong><br/>
+            <a href="http://www.twitter.com/moniguzman">@moniguzman</a><br/>
+            <a href="http://moniguzman.com">moniguzman.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>A storyteller with a passion, working at a Seattle startup called @Intersect.</p>
+<p><strong>Nominated by: Ellyn Angelotti (@ellynangelotti)</strong> </p>
+        <p>"Monica has a distinct voice that really comes out when she tweets. Her tweets are both engaging and instructive, and they make me want to check out whatever she's linking to or tweeting about. We need more energetic people like her in the business." -- Mallary Tenore</p>
     </div>
 </li>
 
