--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 32;    
+    var randomStart = 33;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -514,24 +514,19 @@ jQuery(document).ready(function() {
     </div>
 </li>
 
-<!--
-
 <li>
     <div class="photo">
-        <img src="IMAGEURL" width="128" height="128" alt="" />
-        <p><strong>NAME</strong><br/>
-            <a href="http://www.twitter.com/HANDLE">@HANDLE</a><br/>
-            <a href="WEBSITE">website</a>
+        <img src="http://a0.twimg.com/profile_images/52375832/anniv-matt_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Matt Thompson</strong><br/>
+            <a href="http://www.twitter.com/mthomps">@mthomps</a><br/>
         </p>
     </div>
     <div class="text">
-<p><strong>Twitter bio: </strong></p>
-<p><strong> Nominated by Craig Kanalley (@ckanal) and Mandy Jenkins (@mjenkins)</strong> </p>
-        <p>BLAH BLAH dashdash <a href="NOMINATEURL">NOMINATOR</a></p>
+<p><strong>Twitter bio: </strong>None.</p>
+<p><strong>Nominated by: Bill Mitchell (@bmitch)</strong> </p>
+        <p>"Matt has prompted me to think of social media not as a separate dimension of journalism but as a way of thinking about journalism itself. Leading a discussion about niche journalism at ONA on Saturday, for example, he encouraged journalists to think differently about content. Rather than producing content that we think people in the niche need or want, why not go to those people and create content based, at least initially, on what they're already saying and doing." -- Bill Mitchell</p>
     </div>
 </li>
-
--->
 
 </ul> 
 
